[gd_scene load_steps=4 format=3 uid="uid://ct8ip3wfofxm1"]

[ext_resource type="Script" path="res://structures/portal/portal.gd" id="1_ba8kh"]

[sub_resource type="BoxMesh" id="BoxMesh_gtq2t"]
size = Vector3(1, 2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_sgqbx"]

[node name="portal" type="StaticBody3D"]
script = ExtResource("1_ba8kh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("BoxMesh_gtq2t")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.4, 0, 0, 0, 0.8, 0.4, 2.3, 0)
mesh = SubResource("BoxMesh_gtq2t")

[node name="portal_entry" type="Area3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25679, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="portal_entry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0999999, 0.5, 0)
shape = SubResource("BoxShape3D_sgqbx")

[node name="portal_exit" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.18823, 0.589305, 0)

[connection signal="body_entered" from="portal_entry" to="." method="_on_portal_entry_body_entered"]
[connection signal="body_exited" from="portal_entry" to="." method="_on_portal_entry_body_exited"]
